--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node .",
+		"start": "PAUSE_SECONDS=240 node .",
 		"setup": "npm i -g phantomjs-prebuilt casperjs && npm i"
 	},
 	"repository": {
