--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"hapi": "17.5.2",
 		"hapi-and-healthy": "6.0.1",
 		"lodash": "4.17.10",
-		"request": "2.87.0"
+		"request": "2.87.0",
+		"rolling-file": "1.0.10"
 	},
 	"devDependencies": {}
 }
