--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ cookies.txt
 node_modules
 package-lock.json
 *.xlsx
+.ipynb_checkpoints
+.config
+.ipython
+.local
 data/*.localstorage
 data/cookies*
 snaps/*.png
