give divergence clearing a 5 point buffer on each side

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 node_modules
 .ipynb_checkpoints
+.cache
 .config
 .ipython
 .jupyter
 .local
-data/.cache
 data/*.localstorage
 data/cookies*
 data/*.html
