--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"private": true,
 	"dependencies": {
 		"async.parallel": "0.5.2",
+		"async.retry": "0.5.2",
 		"async.series": "0.5.2",
 		"casperjs": "1.1.4",
 		"chalk": "2.4.1",
