--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "SNAPSHOT_ENABLED=true PAUSE_SECONDS=18 JSON_CACHE=https://api.myjson.com/bins/1eh1ls TICKER_SOURCE_FILE=https://raw.githubusercontent.com/atomantic/tradingview_signals/master/config/tickers.js node .",
-		"crypto": "PAUSE_SECONDS=30 CRYPTO_MODE=1 JSON_CACHE=https://api.myjson.com/bins/1eh1ls TICKER_SOURCE_FILE=https://raw.githubusercontent.com/atomantic/tradingview_signals/master/config/tickers.js node .",
+		"start": "SNAPSHOT_ENABLED=true ABORT_SECONDS=20 PAUSE_SECONDS=20 JSON_CACHE=https://api.myjson.com/bins/1eh1ls TICKER_SOURCE_FILE=https://raw.githubusercontent.com/atomantic/tradingview_signals/master/config/tickers.js node .",
+		"crypto": "ABORT_SECONDS=20 PAUSE_SECONDS=30 CRYPTO_MODE=1 JSON_CACHE=https://api.myjson.com/bins/1eh1ls TICKER_SOURCE_FILE=https://raw.githubusercontent.com/atomantic/tradingview_signals/master/config/tickers.js node .",
 		"setup": "npm i -g phantomjs-prebuilt casperjs now && npm i"
 	},
 	"repository": {
