--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
 		"async.retry": "0.5.2",
 		"async.series": "0.5.2",
 		"casperjs": "1.1.4",
-		"chalk": "2.4.1",
+		"chalk": "2.4.2",
 		"cheerio": "1.0.0-rc.2",
-		"hapi": "17.5.2",
-		"hapi-and-healthy": "6.0.1",
-		"lodash": "4.17.10",
-		"request": "2.87.0",
+		"hapi": "18.1.0",
+		"hapi-and-healthy": "7.0.4",
+		"lodash": "4.17.11",
+		"request": "2.88.0",
+		"request-to-curl": "0.1.1",
 		"rolling-file": "1.0.10"
 	},
 	"devDependencies": {}
