--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "runner",
 	"version": "2.0.0",
-	"description": "",
+	"description": "private stock signal runner for feeding a Google Spreadsheet with trading data",
 	"main": "index.js",
 	"scripts": {
-		"start": "RELOAD_DISABLED=true SNAPSHOT_ENABLED=true ABORT_SECONDS=20 PAUSE_SECONDS=45 JSON_CACHE=https://api.myjson.com/bins/1eh1ls TICKER_SOURCE_FILE=https://raw.githubusercontent.com/atomantic/stock_signals/master/config/tickers.js node .",
-		"crypto": "ABORT_SECONDS=20 PAUSE_SECONDS=30 CRYPTO_MODE=1 JSON_CACHE=https://api.myjson.com/bins/1eh1ls TICKER_SOURCE_FILE=https://raw.githubusercontent.com/atomantic/stock_signals/master/config/tickers.js node .",
-		"setup": "npm i -g phantomjs-prebuilt casperjs now && npm i"
+		"start": "RELOAD_DISABLED=true SNAPSHOT_ENABLED=true ABORT_SECONDS=20 PAUSE_SECONDS=45 JSON_CACHE=https://raw.githubusercontent.com/atomantic/stock_signals/master/data/latest.json TICKER_SOURCE_FILE=https://raw.githubusercontent.com/atomantic/stock_signals/master/config/tickers.js node .",
+		"crypto": "ABORT_SECONDS=20 PAUSE_SECONDS=30 CRYPTO_MODE=1 JSON_CACHE=https://raw.githubusercontent.com/atomantic/stock_signals/master/data/latest.json TICKER_SOURCE_FILE=https://raw.githubusercontent.com/atomantic/stock_signals/master/config/tickers.js node .",
+		"setup": "npm i"
 	},
 	"repository": {
 		"type": "git",
